Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -284,17 +284,19 @@
        " 'Mexico',\n",
        " 'USA',\n",
        " 'Morocco',\n",
-       " 'USA',\n",
+       " 'New Mexico',\n",
        " 'Finland',\n",
        " 'Argentina',\n",
        " 'Italy',\n",
        " 'Canada',\n",
        " 'South Korea',\n",
        " 'Malta',\n",
+       " 'Malta',\n",
+       " 'Thailand',\n",
        " 'Thailand']"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
