Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -242,8 +242,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "countries.append('Malta') # add code here\n",
-    "countries.append('Malta')"
+    "countries.append('Malta') # add code here"
    ]
   },
   {
@@ -260,7 +259,7 @@
    "outputs": [],
    "source": [
     "countries.append('Thailand') # add code here\n",
-    "countries.append('Thailand')\n"
+    "\n"
    ]
   },
   {
