Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {
     "scrolled": true
    },
@@ -166,7 +166,7 @@
        "'Italy'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,24 +184,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Mexico'"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "mexico = countries [3]\n",
-    "mexico = countries [3]\n",
-    "mexico"
+    "mexico = countries [3]\n"
    ]
   },
   {
