Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -400,10 +400,7 @@
     }
    ],
    "source": [
-    "countries\n",
-    "countries.pop()\n",
-    "countries.append('Malta')\n",
-    "countries"
+    "countries.pop()"
    ]
   },
   {
