--- a/index.ipynb
+++ b/index.ipynb
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
        " 'Mexico',\n",
        " 'USA',\n",
        " 'Morocco',\n",
-       " 'New Mexico',\n",
+       " 'USA',\n",
        " 'Finland',\n",
        " 'Argentina',\n",
        " 'Italy',\n",
@@ -303,7 +303,7 @@
        " 'Thailand']"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -374,22 +374,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Malta'"
+       "['Croatia',\n",
+       " 'USA',\n",
+       " 'Argentina',\n",
+       " 'Mexico',\n",
+       " 'USA',\n",
+       " 'Morocco',\n",
+       " 'USA',\n",
+       " 'Finland',\n",
+       " 'Argentina',\n",
+       " 'Italy',\n",
+       " 'Canada',\n",
+       " 'South Korea']"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "countries.pop()"
+    "countries"
    ]
   },
   {
