Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -391,15 +391,19 @@
        " 'Argentina',\n",
        " 'Italy',\n",
        " 'Canada',\n",
-       " 'South Korea']"
+       " 'South Korea',\n",
+       " 'Malta']"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "countries.pop()\n",
+    "countries"
+   ]
   },
   {
    "cell_type": "markdown",
