Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -531,8 +531,7 @@
     }
    ],
    "source": [
-    "num_of_repeats = 3\n",
-    "num_of_repeats # 3"
+    "num_of_repeats = len(countrie)"
    ]
   },
   {
