Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -516,22 +516,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 53,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "num_of_repeats = len(countrie)"
+    "num_of_repeats = len(countries)-len(unique_countries)"
    ]
   },
   {
