--- a/index.ipynb
+++ b/index.ipynb
@@ -516,11 +516,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "num_of_repeats = len(countries)-len(unique_countries)"
+    "num_of_repeats = len(countries)-len(unique_countries)\n",
+    "num_of_repeats"
    ]
   },
   {
